--- a/apps/submit-form/src/styles.css
+++ b/apps/submit-form/src/styles.css
@@ -29,7 +29,7 @@
 	  }
 
 	  .input_wrapper {
-		@apply h-10 flex items-center gap-2 w-full border-[#e3e3e3] border-2 rounded-lg px-3 invalid:focus:border-[#f96c74] py-[0.5rem] leading-none caret-gray-600 bg-white;
+		@apply h-10 flex items-center gap-2 w-full border-[#e3e3e3] focus-within:border-[#2A73A3] border-2 rounded-lg px-3 py-[0.5rem] leading-none caret-gray-600 bg-white duration-75;
 	  }
 
 	  .icon {
@@ -41,7 +41,7 @@
 	  }
 
 	  .error {
-		@apply text-[.8rem] leading-snug text-red-500 pl-2;
+		@apply text-[.8rem] leading-snug text-red-500 pl-2 duration-300;
 	  }
 
 	  .btn {
